--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,16 +4,32 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     padding: 100px 0;
     box-sizing: border-box;
 }
+.title-container{
+    padding: 20px 10px;
+}
+.title-container h1{
+    font-size: 100px;
+    color: #fff;
+    text-shadow: 5px 5px rgb(0, 0, 0, 0.5);
+}
+.description-container{
+    padding: 20px 20%;
+}
+.description-container p{
+    color: #fff;
+    text-shadow: 1px 1px rgb(0, 0, 0, 0.5);
+}
 .search-container{
+    margin: 5vh auto;
     position: relative;
-    margin: 0;
     width: max-content;
 }
 .input-search{
+    text-transform: uppercase;
     width: 300px;
     border: 1px solid #ddd;
     font-size: 16px;
@@ -87,3 +103,100 @@
     height: 25px;
     width: auto;
 }
+
+.list{
+    margin: 0 -5px;
+    font-family: 'Montserrat', sans-serif !important;
+}
+
+.list:after{
+    content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 28%;
+  padding: 0 10px;
+  margin:1% 0;
+}
+
+.card:hover {
+  background: #999;
+  cursor: pointer;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background: #d5d5d5;
+  height: 200px;
+}
+
+.card-dead:hover {
+  background: #999;
+  cursor: pointer;
+}
+
+.card-dead {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  color: white;
+  background: black;
+  height: 200px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 20px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #999;
+    color: #fff;
+    margin: auto;
+    border: 1px solid #fff;
+    width: 50%;
+  }
+  
+  .modal-content label{
+    font-weight: 800;
+  }
+
+  .modal-header{
+    display:flex;
+    background:#686868;
+    padding: 0 20px;
+  }
+
+  .modal-body{
+    padding: 20px;
+  }
+
+  /* The Close Button */
+  .close {
+    color: #fff;
+    float: right;
+    font-size: 55px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
