--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,27 @@
 
   .modal-body{
     padding: 20px;
-    max-height: 90vh;
+    max-height: 85vh;
     overflow: hidden;
+    position: relative;
+  }
+
+  .modal-readmore{
+      background-color: #999;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 25px;
+  }
+
+  .modal-readmore a{
+      text-align: center;
+      width: 100%;
+      text-decoration: none;
+      display: block;
+      color: #fff;
+      font-weight: 800;
   }
 
   .modal-body .icon-container{
