--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,25 @@
   padding: 100px 0;
   box-sizing: border-box;
 }
+.new-background{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 0;
+  box-sizing: border-box;
+}
 .title{
     height: 85vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+.credit2 {
+  margin-top: 1em;
+  height: 33px;
+  width: auto;
 }
 .pad{
   padding: 8rem 20% 1rem;
@@ -220,7 +233,7 @@
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
-  
+
   /* Modal Content */
   .modal-content {
     background-color: #999;
@@ -229,7 +242,7 @@
     border: 1px solid #fff;
     width: 50%;
   }
-  
+
   .modal-content label{
     font-weight: 800;
   }
@@ -313,7 +326,7 @@
     font-size: 55px;
     font-weight: bold;
   }
-  
+
   .close:hover,
   .close:focus {
     color: #000;
