--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,8 @@
   margin: 0 10px;
   text-align: center;
   padding: 10px;
-  background: #ddd;
-  color: #333;
+  background: #cb9897;
+  color: white;
   border: none;
   font-weight: 800;
   z-index: 9;
@@ -111,8 +111,8 @@
   margin: 10px;
   text-align: center;
   padding: 10px;
-  background: #ddd;
-  color: #333;
+  background: #cb9897;
+  color: white;
   border: none;
   font-weight: 800;
   z-index: 10;
@@ -208,7 +208,8 @@
 }
 
 .card:hover {
-  background: #999;
+  background: #fff;
+  color:#000;
   cursor: pointer;
 }
 
@@ -216,8 +217,9 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background: #d5d5d5;
+  background: #cb9897;
   height: 200px;
+  color: white;
 }
 
 .modal {
@@ -236,7 +238,7 @@
 
   /* Modal Content */
   .modal-content {
-    background-color: #999;
+    background-color: #CB9897;
     color: #fff;
     margin: auto;
     border: 1px solid #fff;
@@ -255,7 +257,7 @@
   }
 
   .modal-readmore{
-      background-color: #999;
+      background-color: #CB9897;
       position: absolute;
       bottom: 0;
       left: 0;
